Added UI to the game

--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS Rock Paper Scissors</title>
-  <script src="game.js"></script>
+  <script src="game.js" defer></script>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
+  <div class="container">
+    <div class="page-header"><h1>Rock, Paper, Scissors Game</h1></div>
+    <div class="btn-container">
+      <div class="btn-rock-div"><button type="button" class="btn-rock" value="0">Rock</button></div>
+      <div class="btn-paper-div"><button type="button" class="btn-paper" value="1">Paper</button></div>
+      <div class="btn-scissors-div"><button type="button" class="btn-scissors" value="2">Scissors</button></div>
+    </div>
+    <div class="game-container">
+      <div class="game-score">
+        <p><h2>Score</h2></p>
+        <p><h3><span class="player-score">Player: 0</span> - <span class="computer-score">Computer: 0</span></h3></p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
